--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -18,6 +18,14 @@
         <hr class="divider">
 
         <div class="comments-section">
+            <form method="post" action="{% url 'get_post_by_id' post.id %}" class="comment-form">
+            {% csrf_token %}
+                <h3>Додати коментар:</h3>
+                <input type='text' id='author' name="author" rows="1" required placeholder="Ваше ім'я">
+                <br>
+                <textarea name="text" rows="4" required placeholder="Ваш коментар..."></textarea>
+                <button type="submit" class="back-link">Додати коментар</button>
+            </form>
             <div class="posts-header">
                 <h3 style="margin-top: 20px;">Коментарі:</h3>
                 <a href="{% url 'post_list' %}" class="back-link">← Назад до списку постів</a>
