added notifications for chats

--- a/templates/auth_system/base.html
+++ b/templates/auth_system/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Authentication{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/styles.css' %}">
 </head>
 <body class="auth-page">
     <div class="form-container">
