--- a/templates/messages/thread_detail.html
+++ b/templates/messages/thread_detail.html
@@ -210,6 +210,10 @@ form.addEventListener("submit", function(e) {
 socket.onmessage = function(event) {
     const data = JSON.parse(event.data);
 
+    if (data.type === "notify_message") {
+        return; 
+    }
+
     const msgDiv = document.createElement("div");
     msgDiv.classList.add("message");
 
