--- a/templates/auth_system/login.html
+++ b/templates/auth_system/login.html
@@ -1,35 +1,36 @@
 {% extends "auth_system/base.html" %}
 
 {% block title %}Sign In{% endblock %}
-
-{% block header %}Sign In{% endblock %}
+{% block header %}Welcome Back{% endblock %}
 
 {% block form_block %}
     <form method="post" action="{% url 'auth_system:login' %}">
         {% csrf_token %}
         
         <div class="form-group">
-            <label for="{{ form.username.id_for_label }}">Username:</label>
+            <label for="{{ form.username.id_for_label }}">Username</label>
             {{ form.username }}
             {% if form.username.errors %}
-            <div class="form-error">{{ form.username.errors.0 }}</div>
+                <div class="form-error">{{ form.username.errors.0 }}</div>
             {% endif %}
         </div>
 
         <div class="form-group">
-            <label for="{{ form.password.id_for_label }}">Password:</label>
+            <label for="{{ form.password.id_for_label }}">Password</label>
             {{ form.password }}
             {% if form.password.errors %}
-            <div class="form-error">{{ form.password.errors.0 }}</div>
+                <div class="form-error">{{ form.password.errors.0 }}</div>
             {% endif %}
         </div>
-        <p class="form-note" style="text-align: right; margin-top: -35px; margin-bottom: 30px;;">
-            <a href="{% url 'auth_system:password_reset' %}">Forgot a password?</a>
-        </p>
-        <button type="submit" class="submit-btn">Submit</button>
+
+        <a href="{% url 'auth_system:password_reset' %}" class="forgot-password-link">
+            Forgot password?
+        </a>
+
+        <button type="submit" class="submit-btn">Sign In</button>
     </form>
 
-    <p class="form-note">
-        Don`t have a profile? <a href="{% url 'auth_system:register' %}">Sign Up</a>
-    </p>
+    <div class="auth-links">
+        Don't have a profile? <a href="{% url 'auth_system:register' %}">Sign Up</a>
+    </div>
 {% endblock %}
